# project

./: CMakeListTemplate.txt
CMakeConanProject/: README.md  conanfile.txt
CMakeConanProject/src/: main.cpp
CMakeConanVulkan/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build_debug.bat  build_release.bat  conanfile.txt  vsg-config.cmake
CMakeConanVulkan/build_deps/: CMakePresets.json  FindVulkan.cmake  VulkanHeaders-Target-release.cmake  VulkanHeaders-release-x86_64-data.cmake  VulkanHeadersConfig.cmake  VulkanHeadersConfigVersion.cmake  VulkanHeadersTargets.cmake  VulkanLoader-Target-release.cmake  VulkanLoader-release-x86_64-data.cmake  VulkanLoaderConfig.cmake  VulkanLoaderTargets.cmake  conan_toolchain.cmake  conandeps_legacy.cmake  conanrunenv-release-x86_64.bat  module-Vulkan-Target-release.cmake  module-VulkanTargets.cmake  vsg-Target-release.cmake  vsg-config-version.cmake  vsg-config.cmake  vsg-release-x86_64-data.cmake  vsgTargets.cmake
CMakeConanVulkan/src/: main.cpp
ConanTest/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  copy_dlls_english.ps1  copy_dlls_simple.ps1  copy_osg_dlls.ps1  setup_conan_deps.ps1
ConanTest/src/: main.cpp
FileExtProjOpenRegist/: FileAssociation.cpp  FileAssociation.h  PMTXEditor.pro  main.cpp
QEmptyConanCmake/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
QEmptyConanCmake -osgosgearth/: osgQtCompositeViewer.cpp
QEmptyConanCmake/src/: main.cpp
QtEmpytProject-Trae/: CMakeLists.txt
QtPropertyWidget/: CMakeLists.txt  example_usage.cpp  mainwindow.cpp  mainwindow.h  osgQtCompositeViewer.h  propertywidget.cpp  propertywidget.h  qpropertyobject.cpp  qpropertyobject.h  qpropertyobject_struct.h  qpropertyvalue.cpp  qpropertyvalue.h  较为合理.txt
QtVcpkgEmptyProject/: CMakeLists.txt  QtVcpkgEmptyProject.pro  README.md  main.cpp  main_console.cpp  mainwindow.cpp  mainwindow.h  osgwidget.cpp  osgwidget.h  packages.txt  untitled3.pro
QtVcpkgEmptyProject/.cache/clangd/index/: main_console.cpp.79492E4EDF83F285.idx
QtZibCompressDir/: CMakeLists.txt  ReadMe.md  main.cpp
obj-mls-viewer/: form.pro  imagepreviewwidget.cpp  imagepreviewwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mlsreader.cpp  mlsreader.h  objviewerwidget.cpp  objviewerwidget.h
